--- a/packages/dx-react-chart/package.json
+++ b/packages/dx-react-chart/package.json
@@ -2,6 +2,7 @@
   "name": "@devexpress/dx-react-chart",
   "version": "3.0.6",
   "description": "Composable plugin-based chart component for React",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
@@ -24,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-chart.umd.js",
+  "main": "dist/dx-react-chart.es.js",
   "module": "dist/dx-react-chart.es.js",
   "globalName": "DevExpress.DXReactChart",
   "files": [
