--- a/packages/dx-react-chart-bootstrap4/package.json
+++ b/packages/dx-react-chart-bootstrap4/package.json
@@ -2,6 +2,7 @@
   "name": "@devexpress/dx-react-chart-bootstrap4",
   "version": "3.0.6",
   "description": "Bootstrap 4 templates for DevExtreme React Chart component",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
@@ -27,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-chart-bootstrap4.umd.js",
+  "main": "dist/dx-react-chart-bootstrap4.es.js",
   "module": "dist/dx-react-chart-bootstrap4.es.js",
   "styles": "dist/dx-react-chart-bootstrap4.css",
   "globalName": "DevExpress.DXReactChartBootstrap4",
