--- a/packages/dx-react-chart-material-ui/package.json
+++ b/packages/dx-react-chart-material-ui/package.json
@@ -2,6 +2,7 @@
   "name": "@devexpress/dx-react-chart-material-ui",
   "version": "3.0.6",
   "description": "Material-UI templates for DevExtreme React Chart component",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
@@ -27,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-chart-material-ui.cjs.js",
+  "main": "dist/dx-react-chart-material-ui.es.js",
   "module": "dist/dx-react-chart-material-ui.es.js",
   "globalName": "DevExpress.DXReactChartMaterialUI",
   "files": [
