--- a/packages/dx-react-chart-material-ui/.eslintrc.json
+++ b/packages/dx-react-chart-material-ui/.eslintrc.json
@@ -6,7 +6,7 @@
     "rules": {
         "jsx-a11y/no-static-element-interactions": "off",
         "filenames/match-regex": [2, "^[a-z-\\.]+$"],
-        "no-restricted-imports": ["error", "@mui/material", "@mui/icons-material"]
+        "no-restricted-imports": ["error"]
     },
     "env": {
       "jest/globals": true
