--- a/packages/dx-react-grid-demos/package.json
+++ b/packages/dx-react-grid-demos/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@devexpress/dx-react-grid-demos",
   "version": "3.0.6",
+  "type": "module",
   "description": "DevExtreme React Components Demos",
   "author": {
     "name": "Developer Express Inc.",
