--- a/packages/dx-vue-core/package.json
+++ b/packages/dx-vue-core/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "3.0.6",
   "description": "Core library for DevExtreme Vue Components",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
@@ -24,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-vue-core.umd.js",
+  "main": "dist/dx-vue-core.es.js",
   "module": "dist/dx-vue-core.es.js",
   "globalName": "DevExpress.DXVueCore",
   "files": [
