--- a/packages/dx-vue-grid-bootstrap4/package.json
+++ b/packages/dx-vue-grid-bootstrap4/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "3.0.6",
   "description": "Bootstrap 4 templates for DevExtreme Vue Grid component",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
@@ -24,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-vue-grid-bootstrap4.umd.js",
+  "main": "dist/dx-vue-grid-bootstrap4.es.js",
   "module": "dist/dx-vue-grid-bootstrap4.es.js",
   "styles": "dist/dx-vue-grid-bootstrap4.css",
   "globalName": "DevExpress.DXVueGridBootstrap4",
