--- a/packages/dx-react-chart-demos/package.json
+++ b/packages/dx-react-chart-demos/package.json
@@ -15,7 +15,7 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "build:generator": "node ../dx-demo-shell/generate-demos.js",
-    "build": "yarn build:generator && webpack --env",
+    "build": "yarn build:generator && webpack --config webpack.config.cjs --env",
     "build:prod": "yarn build:generator && webpack --env.production",
     "build:watch:generator": "nodemon --exec \"yarn build:generator\" --watch \"src/demo-sources/**/*\" --ignore \"**/*.g.jsx\"  --ignore \"**/*.g.test.jsx\" --watch \"src/theme-sources/*/demo-source-data.json\" --watch \"generate-demos.js\" --ext js,jsx,jsxt,json,ts,tsx,tsxt",
     "build:watch": "concurrently \"yarn build:watch:generator\" \"yarn start-demo-server\"",
