--- a/packages/dx-react-grid/package.json
+++ b/packages/dx-react-grid/package.json
@@ -26,7 +26,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-grid.es.js",
+  "main": "dist/dx-react-grid.umd.js",
   "module": "dist/dx-react-grid.es.js",
   "globalName": "DevExpress.DXReactGrid",
   "files": [
