--- a/packages/dx-react-scheduler-material-ui/package.json
+++ b/packages/dx-react-scheduler-material-ui/package.json
@@ -26,7 +26,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-scheduler-material-ui.es.js",
+  "main": "dist/dx-react-scheduler-material-ui.cjs.js",
   "module": "dist/dx-react-scheduler-material-ui.es.js",
   "globalName": "DevExpress.DXReactSchedulerMaterialUI",
   "files": [
