--- a/packages/dx-core/package.json
+++ b/packages/dx-core/package.json
@@ -24,7 +24,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-core.es.js",
+  "main": "dist/dx-core.umd.js",
   "module": "dist/dx-core.es.js",
   "globalName": "DevExpress.DXCore",
   "files": [
