--- a/packages/dx-react-chart-material-ui/package.json
+++ b/packages/dx-react-chart-material-ui/package.json
@@ -28,7 +28,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-chart-material-ui.es.js",
+  "main": "dist/dx-react-chart-material-ui.cjs.js",
   "module": "dist/dx-react-chart-material-ui.es.js",
   "globalName": "DevExpress.DXReactChartMaterialUI",
   "files": [
