--- a/packages/dx-react-chart/package.json
+++ b/packages/dx-react-chart/package.json
@@ -25,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-react-chart.es.js",
+  "main": "dist/dx-react-chart.umd.js",
   "module": "dist/dx-react-chart.es.js",
   "globalName": "DevExpress.DXReactChart",
   "files": [
