--- a/packages/dx-scheduler-core/package.json
+++ b/packages/dx-scheduler-core/package.json
@@ -23,7 +23,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-scheduler-core.es.js",
+  "main": "dist/dx-scheduler-core.umd.js",
   "module": "dist/dx-scheduler-core.es.js",
   "globalName": "DevExpress.DXSchedulerCore",
   "files": [
