--- a/packages/dx-vue-core/package.json
+++ b/packages/dx-vue-core/package.json
@@ -25,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-vue-core.es.js",
+  "main": "dist/dx-vue-core.umd.js",
   "module": "dist/dx-vue-core.es.js",
   "globalName": "DevExpress.DXVueCore",
   "files": [
