--- a/packages/dx-vue-grid-bootstrap4/package.json
+++ b/packages/dx-vue-grid-bootstrap4/package.json
@@ -25,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-vue-grid-bootstrap4.es.js",
+  "main": "dist/dx-vue-grid-bootstrap4.umd.js",
   "module": "dist/dx-vue-grid-bootstrap4.es.js",
   "styles": "dist/dx-vue-grid-bootstrap4.css",
   "globalName": "DevExpress.DXVueGridBootstrap4",
