--- a/packages/dx-vue-grid/package.json
+++ b/packages/dx-vue-grid/package.json
@@ -25,7 +25,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/dx-vue-grid.es.js",
+  "main": "dist/dx-vue-grid.umd.js",
   "module": "dist/dx-vue-grid.es.js",
   "globalName": "DevExpress.DXVueGrid",
   "files": [
