--- a/packages/dx-core/package.json
+++ b/packages/dx-core/package.json
@@ -26,6 +26,13 @@
   },
   "main": "dist/dx-core.umd.js",
   "module": "dist/dx-core.es.js",
+  "exports": {
+    ".": {
+      "require": "./dist/dx-core.umd.js",
+      "module": "./dist/dx-core.es.js",
+      "default": "./dist/dx-core.es.js"
+    }
+  },
   "globalName": "DevExpress.DXCore",
   "files": [
     "dist"
