--- a/packages/dx-react-chart-bootstrap4/package.json
+++ b/packages/dx-react-chart-bootstrap4/package.json
@@ -36,6 +36,13 @@
     "dist"
   ],
   "types": "dist/dx-react-chart-bootstrap4.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/dx-react-chart-bootstrap4.umd.js",
+      "import": "./dist/dx-react-chart-bootstrap4.es.js",
+      "default": "./dist/dx-react-chart-bootstrap4.es.js"
+    }
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
