--- a/packages/dx-react-chart/package.json
+++ b/packages/dx-react-chart/package.json
@@ -27,6 +27,13 @@
   },
   "main": "dist/dx-react-chart.umd.js",
   "module": "dist/dx-react-chart.es.js",
+  "exports": {
+    ".": {
+      "require": "./dist/dx-react-chart.umd.js",
+      "import": "./dist/dx-react-chart.es.js",
+      "default": "./dist/dx-react-chart.es.js"
+    }
+  },
   "globalName": "DevExpress.DXReactChart",
   "files": [
     "dist"
