--- a/packages/dx-react-common/package.json
+++ b/packages/dx-react-common/package.json
@@ -3,6 +3,7 @@
   "name": "@devexpress/dx-react-common",
   "version": "3.0.6",
   "description": "DevExtreme React Components",
+  "type": "module",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
