--- a/packages/dx-react-chart-material-ui/package.json
+++ b/packages/dx-react-chart-material-ui/package.json
@@ -2,39 +2,20 @@
   "name": "@devexpress/dx-react-chart-material-ui",
   "version": "3.0.6",
   "description": "Material-UI templates for DevExtreme React Chart component",
-  "type": "module",
+  "license": "SEE LICENSE IN README.md",
   "author": {
     "name": "Developer Express Inc.",
     "url": "https://www.devexpress.com/"
-  },
-  "bugs": {
-    "url": "https://github.com/DevExpress/devextreme-reactive/issues"
   },
   "homepage": "https://devexpress.github.io/devextreme-reactive/",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DevExpress/devextreme-reactive.git"
   },
-  "keywords": [
-    "react",
-    "data",
-    "chart",
-    "d3js",
-    "material",
-    "material-ui",
-    "react-component"
-  ],
-  "license": "SEE LICENSE IN README.md",
-  "publishConfig": {
-    "access": "public"
+  "bugs": {
+    "url": "https://github.com/DevExpress/devextreme-reactive/issues"
   },
-  "main": "dist/dx-react-chart-material-ui.cjs.js",
-  "module": "dist/dx-react-chart-material-ui.es.js",
-  "globalName": "DevExpress.DXReactChartMaterialUI",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/dx-react-chart-material-ui.d.ts",
+  "type": "module",
   "exports": {
     ".": {
       "require": "./dist/dx-react-chart-material-ui.cjs.js",
@@ -42,15 +23,35 @@
       "default": "./dist/dx-react-chart-material-ui.es.js"
     }
   },
+  "main": "dist/dx-react-chart-material-ui.cjs.js",
+  "module": "dist/dx-react-chart-material-ui.es.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
     "build": "rollup -c rollup.config.js",
     "build:watch": "rollup -c rollup.config.js -w",
-    "update-api": "api-extractor run",
     "lint": "eslint \"src/**\"",
-    "lint:fix": "yarn lint -- --fix"
+    "lint:fix": "yarn lint -- --fix",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch",
+    "update-api": "api-extractor run"
+  },
+  "types": "dist/dx-react-chart-material-ui.d.ts",
+  "dependencies": {
+    "clsx": "^1.0.4",
+    "prop-types": "^15.7.2"
+  },
+  "peerDependencies": {
+    "@devexpress/dx-chart-core": "3.0.6",
+    "@devexpress/dx-react-chart": "3.0.6",
+    "@devexpress/dx-react-core": "3.0.6",
+    "@emotion/react": ">=11.4.1",
+    "@emotion/styled": ">=11.3.0",
+    "@mui/icons-material": ">=5.0.0",
+    "@mui/material": ">=5.0.0",
+    "react": ">=17.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
@@ -91,18 +92,17 @@
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-license": "^0.12.1"
   },
-  "dependencies": {
-    "clsx": "^1.0.4",
-    "prop-types": "^15.7.2"
+  "keywords": [
+    "chart",
+    "d3js",
+    "data",
+    "material",
+    "material-ui",
+    "react",
+    "react-component"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
-  "peerDependencies": {
-    "@devexpress/dx-chart-core": "3.0.6",
-    "@devexpress/dx-react-chart": "3.0.6",
-    "@devexpress/dx-react-core": "3.0.6",
-    "@emotion/react": ">=11.4.1",
-    "@emotion/styled": ">=11.3.0",
-    "@mui/icons-material": ">=5.0.0",
-    "@mui/material": ">=5.0.0",
-    "react": ">=17.0.2"
-  }
+  "globalName": "DevExpress.DXReactChartMaterialUI"
 }
