Rework dx-demo-shell to ESM

--- a/packages/dx-react-common/package.json
+++ b/packages/dx-react-common/package.json
@@ -11,9 +11,9 @@
   "license": "SEE LICENSE IN README.md",
   "main": "index.js",
   "scripts": {
-    "build": "yarn webpack --env",
-    "build:prod": "yarn webpack --env.production",
-    "build:watch": "webpack-dev-server --env"
+    "build": "yarn webpack --config webpack.config.cjs --env",
+    "build:prod": "yarn webpack --config webpack.config.cjs --env.production",
+    "build:watch": "webpack-dev-server --config webpack.config.cjs --env"
   },
   "dependencies": {
     "@devexpress/dx-demo-shell": "3.0.6",
