--- a/packages/dx-react-grid-bootstrap4/package.json
+++ b/packages/dx-react-grid-bootstrap4/package.json
@@ -18,12 +18,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "require": "./dist/dx-react-grid-bootstrap4.umd.js",
+      "require": "./dist/dx-react-grid-bootstrap4.umd.cjs",
       "import": "./dist/dx-react-grid-bootstrap4.es.js",
       "default": "./dist/dx-react-grid-bootstrap4.es.js"
     }
   },
-  "main": "dist/dx-react-grid-bootstrap4.umd.js",
+  "main": "dist/dx-react-grid-bootstrap4.umd.cjs",
   "module": "dist/dx-react-grid-bootstrap4.es.js",
   "files": [
     "dist"
