--- a/packages/dx-vue-core/package.json
+++ b/packages/dx-vue-core/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/DevExpress/devextreme-reactive/issues"
   },
   "type": "module",
-  "main": "dist/dx-vue-core.umd.js",
+  "main": "dist/dx-vue-core.umd.cjs",
   "module": "dist/dx-vue-core.es.js",
   "files": [
     "dist"
