--- a/packages/dx-scheduler-core/package.json
+++ b/packages/dx-scheduler-core/package.json
@@ -18,12 +18,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "require": "./dist/dx-scheduler-core.umd.js",
+      "require": "./dist/dx-scheduler-core.umd.cjs",
       "import": "./dist/dx-scheduler-core.es.js",
       "default": "./dist/dx-scheduler-core.es.js"
     }
   },
-  "main": "dist/dx-scheduler-core.umd.js",
+  "main": "dist/dx-scheduler-core.umd.cjs",
   "module": "dist/dx-scheduler-core.es.js",
   "files": [
     "dist"
