--- a/examples/vite/package.json
+++ b/examples/vite/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3100",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "testcafe chrome tests/test.js"
   },
   "dependencies": {
     "@devexpress/dx-chart-core": "4.0.2",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10"
+    "@types/react-dom": "^18.0.10",
+    "testcafe": "^2.2.0"
   }
 }
