--- a/examples/next/package.json
+++ b/examples/next/package.json
@@ -28,7 +28,10 @@
     "d3-color": "^3.1.0",
     "next": "^13.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "lodash-es": "^4.17.21",
+    "valtio": "^1.1.0",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "babel-plugin-direct-import": "^1.0.0",
