--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "PORT=3100 react-scripts start",
+    "dev": "cross-env PORT=3100 react-scripts start",
     "build": "react-scripts build",
     "test": "testcafe chrome tests/test.js"
   },
@@ -26,7 +26,10 @@
     "d3-color": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "lodash-es": "^4.17.21",
+    "valtio": "^1.1.0",
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
