--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -22,7 +22,8 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
-    "@mui/x-date-pickers": "5.0.9",
+    "@mui/x-date-pickers": "^5.0.15",
+    "classnames": "^2.3.2",
     "d3-color": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -46,12 +47,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
     ]
   }
 }
